sample parsing functionality working

--- a/test.ipynb
+++ b/test.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-06-03T14:18:27.890958Z",
-     "start_time": "2024-06-03T14:18:27.885284Z"
+     "end_time": "2024-06-04T00:44:18.109503Z",
+     "start_time": "2024-06-04T00:44:18.104412Z"
     }
    },
    "source": [
@@ -15,16 +15,46 @@
     "import os\n",
     "\n",
     "from difflib import SequenceMatcher\n",
-    "from os import path"
+    "from os import path\n",
+    "\n",
+    "def find_heading(_data: str, _heading: str, _exit_on_first=False) -> str:\n",
+    "    \"\"\"\n",
+    "    Find all the text encapsulating a _heading, not the _heading itself.\n",
+    "    :param _data: file contents.\n",
+    "    :param _heading: the name of the _heading, excluding the '#' and any leading or trailing whitespace.\n",
+    "    :param _exit_on_first: if True, stops after finding the next _heading.\n",
+    "    \"\"\"\n",
+    "    _heads = RE_HEADING.split(_data)\n",
+    "\n",
+    "    target_heading = 0\n",
+    "    _text = ''\n",
+    "\n",
+    "    for _i, _s in enumerate(_heads):\n",
+    "        if _s == '#' * len(_s):  # only hashtags\n",
+    "            if _heads[_i + 1] == _heading:\n",
+    "                target_heading = len(_s)\n",
+    "            elif target_heading != 0:  # already found the target _heading\n",
+    "                if _exit_on_first:\n",
+    "                    break\n",
+    "                elif len(_s) <= target_heading:  # found a higher level _heading, stop\n",
+    "                    break\n",
+    "            continue\n",
+    "\n",
+    "        if target_heading == 0:\n",
+    "            continue  # _heads before _heading\n",
+    "\n",
+    "        _text += _s\n",
+    "    # do not strip new lines! they may be used for parsing later (eg: \\n    1. valid question)\n",
+    "    return _text.removeprefix(_heading).strip('---')"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-03T14:18:28.011243Z",
-     "start_time": "2024-06-03T14:18:28.005237Z"
+     "end_time": "2024-06-04T00:44:18.496844Z",
+     "start_time": "2024-06-04T00:44:18.492591Z"
     }
    },
    "cell_type": "code",
@@ -36,229 +66,188 @@
    ],
    "id": "b1f5deb31298bb5d",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-03T14:18:29.264026Z",
-     "start_time": "2024-06-03T14:18:29.260260Z"
+     "end_time": "2024-06-04T01:30:05.737519Z",
+     "start_time": "2024-06-04T01:30:05.727628Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "QUESTIONS_HEADING = 'Anki Questions'\n",
-    "\n",
-    "# Target: #anki/DECK/TAG[/SUB_TAGS]\n",
-    "# Group: DECK e TAG[/SUB_TAGS], used to determine the Anki deck and Note tags\n",
-    "RE_ANKI_TAG = re.compile(r'(#anki)/(\\S+?)/(\\S.+)')\n",
-    "# RE_QUESTIONS_HEAD = re.compile(r'(#)+? +?' + QUESTIONS_HEADING + r' *?\\n')\n",
-    "# Target: 1. QUESTION TEXT\n",
-    "# Group: returns the text of the question\n",
-    "RE_QUESTIONS_BODY = re.compile(r'\\d+\\. (.+)')\n",
-    "# Target: [[ANY TEXT BETWEEN TWO BRACKETS]]\n",
-    "# Group: text in between, may contain the optional #heading link or |link renaming tokens\n",
-    "RE_LINKS = re.compile(r'\\[\\[(.*?)]]')\n",
-    "\n",
-    "# [[link#header|ans]] groups: link, header, ans\n",
-    "# RE_LINKS = re.compile(r'\\[\\[([a-zA-Z0-9 ]+)#?([a-zA-Z0-9 ]*?)\\|?(ans)*?]]')\n",
-    "\n",
-    "# Target: #[#...#] [space...space]HEADING[space..space]\\n\n",
-    "# Group: hashtags, used to figure out the heading level\n",
-    "def regex_heading(heading):\n",
-    "    return re.compile(r'(#)+? +?' + heading + r' *?\\n')\n"
+    "def re_heading(heading):\n",
+    "    # r'(#+?) +(.+?) *\\n'\n",
+    "    return re.compile(r'(#+?) +' + heading + r' *\\n')"
    ],
    "id": "99a9b29cdca88f35",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 32
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-03T14:18:31.463482Z",
-     "start_time": "2024-06-03T14:18:31.455300Z"
+     "end_time": "2024-06-04T01:31:25.986711Z",
+     "start_time": "2024-06-04T01:31:25.981522Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "anki_tag = RE_ANKI_TAG.search(data)\n",
-    "anki_tag, anki_tag.groups()"
-   ],
-   "id": "69edee256626880f",
+   "source": "re_heading('abcdefghijk').split(data)",
+   "id": "c1e517bdb9718722",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<re.Match object; span=(16, 47), match='#anki/biologia/biologia_celular'>,\n",
-       " ('#anki', 'biologia', 'biologia_celular'))"
+       "['#hub/bio/celula\\n#anki/biologia/biologia_celular\\n\\n\\nLivro 1, Frente 1, Capítulo 5\\n\\n#      Anki Questions    \\n---\\n2. O que é [[teoria celular]]?\\n3. Quais organelas são compartilhadas entre as [[células eucarióticas]] e [[células procarióticas]]? [[Biologia celular#organelas compartilhadas|ans]]\\n4. O que é [[teoria endossimbiôntica]]?\\n5. Descreva a função e onde encontra-se o [[citoplasma]].\\n6. This has multiple [[ribossomos]] links [[peroxissomo]] \\n\\n## inside heading\\ntext inside 1. what about middle text?\\n\\n1. are we reading this?\\naa\\n\\naa\\na\\na\\na\\na\\na\\na\\nsdfkaslkdjf;laks\\n\\na\\n\\n#                Answers     \\n---\\n### organelas              compartilhadas    \\nCitoplasma, ribossomos, membrana plasmática e DNA \\nlorem ipum\\n\\n\\nsadfkjasldf \\naslfkjasldfk\\ndlafjsad;lf\\n\\n# LAST\\n']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 36
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-03T14:11:22.058788Z",
-     "start_time": "2024-06-03T14:11:22.054223Z"
+     "end_time": "2024-06-04T01:33:24.381408Z",
+     "start_time": "2024-06-04T01:33:24.375929Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "re_heading('test').split('# test\\n')",
+   "id": "d922180c07fc55a6",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['', '#', '']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 44
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-04T00:47:32.638669Z",
+     "start_time": "2024-06-04T00:47:32.635481Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "def _find_heading(heading, exit_on_first=False):\n",
-    "    text_before, text = data.split(regex_heading(heading), maxsplit=1)\n",
+    "text = find_heading(data, QUESTIONS_HEADING)\n",
+    "cards = RE_CARD_BODY.findall(text)\n",
     "\n",
-    "    heading_level = 1\n",
-    "    for c in text_before[::-1]:\n",
-    "        if c == '#':\n",
-    "            heading_level += 1\n",
-    "        else:\n",
-    "            break\n",
+    "card_front, card_back = list(), list()\n",
     "\n",
-    "    heading_text = ''\n",
-    "\n",
-    "    for line in text.split('\\n'):\n",
-    "        h = re.match(r'(#+?) ', line)\n",
-    "        if h is not None:\n",
-    "            if exit_on_first:\n",
-    "                break  # first heading found\n",
-    "            elif len(h.group(1)) <= heading_level:\n",
-    "                break  # found a higher level heading\n",
-    "            # child heading, proceed\n",
-    "        heading_text += line + '\\n'\n",
-    "\n",
-    "    return heading_text.strip('\\n').strip('---')\n",
-    "\n",
-    "questions = RE_QUESTIONS_BODY.findall(_find_heading(QUESTIONS_HEADING))\n",
+    "for c in cards:\n",
+    "    for i, (q, ans) in enumerate(RE_CARD_ENTRY.findall(c)):\n",
+    "        print(i, q)\n",
+    "        print('\\t >', ans)\n",
+    "        if ans:\n",
+    "            "
+   ],
+   "id": "40b81dd0d97e6727",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 O que é [[teoria celular]]?\n",
+      "\t > \n",
+      "0 Quais organelas são compartilhadas entre as [[células eucarióticas]] e [[células procarióticas]]?\n",
+      "\t > Biologia celular#organelas compartilhadas|ans\n",
+      "0 O que é [[teoria endossimbiôntica]]?\n",
+      "\t > \n",
+      "0 Descreva a função e onde encontra-se o [[citoplasma]].\n",
+      "\t > \n",
+      "0 are we reading this?\n",
+      "\t > \n"
+     ]
+    }
+   ],
+   "execution_count": 31
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-04T00:24:52.849347Z",
+     "start_time": "2024-06-04T00:24:52.847342Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "text = find_heading(data, QUESTIONS_HEADING)",
+   "id": "596f0bfe06b1b5e0",
+   "outputs": [],
+   "execution_count": 104
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-03T19:30:49.138842Z",
+     "start_time": "2024-06-03T19:30:49.134475Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "questions = RE_QUESTIONS_BODY.findall(text)\n",
     "questions"
    ],
-   "id": "66a64b2d0b0a5ce8",
+   "id": "a6aa0d172b0225e8",
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['O que é [[teoria celular]]?',\n",
        " 'Quais organelas são compartilhadas entre as [[células eucarióticas]] e [[células procarióticas]]? [[Biologia celular#organelas compartilhadas|ans]]',\n",
-       " 'O que é [[teoria endossimbiôntica]]?',\n",
-       " 'Descreva a função e onde encontra-se o [[citoplasma]].']"
+       " 'O que é [[teoria endossimbiôntica]]?']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 15
+   "execution_count": 86
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-03T14:19:11.328696Z",
-     "start_time": "2024-06-03T14:19:11.324896Z"
+     "end_time": "2024-06-03T19:30:49.463374Z",
+     "start_time": "2024-06-03T19:30:49.459117Z"
     }
    },
    "cell_type": "code",
-   "source": "regex_heading(QUESTIONS_HEADING).split(data)",
-   "id": "ced9459c5967b853",
+   "source": [
+    "for i, q in enumerate(questions):\n",
+    "    for link in RE_LINKS.findall(q):\n",
+    "        if link.endswith('|ans'):\n",
+    "            questions[i] = q.replace('[['+link+r']]', '').strip()\n",
+    "questions"
+   ],
+   "id": "d8b16636f63a10f1",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['#hub/bio/celula\\n#anki/biologia/biologia_celular\\n\\nLivro 1, Frente 1, Capítulo 5\\n',\n",
-       " '#',\n",
-       " '---\\n2. O que é [[teoria celular]]?\\n3. Quais organelas são compartilhadas entre as [[células eucarióticas]] e [[células procarióticas]]? [[Biologia celular#organelas compartilhadas|ans]]\\n4. O que é [[teoria endossimbiôntica]]?\\n5. Descreva a função e onde encontra-se o [[citoplasma]].\\n\\n# Answers\\n---\\n### organelas compartilhadas\\nCitoplasma, ribossomos, membrana plasmática e DNA ']"
+       "['O que é [[teoria celular]]?',\n",
+       " 'Quais organelas são compartilhadas entre as [[células eucarióticas]] e [[células procarióticas]]?',\n",
+       " 'O que é [[teoria endossimbiôntica]]?']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "d8db261c156fe065"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "40b81dd0d97e6727"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "596f0bfe06b1b5e0"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "65f86bd0f04e98b8"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "cd61fff01632bed"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "644f9b156878c949"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "335cc0978c8cb37"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "4c1c7d23bad2fb6a"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "af4f42b7e950d973"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "d8b16636f63a10f1"
+   "execution_count": 87
   },
   {
    "metadata": {},
